contact form alignment fixed, adventure and comfort written content added, map buttons centered and given own row

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,9 @@
      */
      font-family: "Montserrat", sans-serif;
 }
+p {
+    font-size: 18px;
+}
  .text-align {
      text-align: center;
 }
@@ -59,7 +62,7 @@
      background-image: url("../images/index_images/discoverlakes.jpg");
      width: 100%;
      height: 100%;
-     padding-top: 350px;
+     padding-top: 270px;
      padding-bottom: 350px;
      background-size: cover;
      display: inline-block;
@@ -215,11 +218,7 @@
          font-size: 50px;
     }
 }
- @media (min-width: 62em) {
-     .featurette-heading {
-         margin-top: 7rem;
-    }
-}
+
  @media (max-width: 768px) {
      .carousel .carousel-inner {
          height: auto;
